# initfiles

./: README.md
c_cpp/: README.md
c_cpp/cmake/: .editorconfig  CMakeLists.txt
c_cpp/cmake/src/: example.cpp  main.cpp
c_cpp/cmake/tests/: CMakeLists.txt
c_cpp/meson/: .clang-format  .editorconfig  meson.build
c_cpp/meson/include/: example.hpp
c_cpp/meson/tests/: meson.build
